- Add support for MS Teams notifications
